--- a/css/main.css
+++ b/css/main.css
@@ -169,3 +169,7 @@
   --bs-form-invalid-color: #ea868f;
   --bs-form-invalid-border-color: #ea868f;
 }
+
+body {
+  background-color: aquamarine;
+}
