--- a/css/main.scss
+++ b/css/main.scss
@@ -1,21 +1,61 @@
-// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "./bootstrap/scss/functions";
+// Custom.scss
+// Option A: Include all of Bootstrap
 
-// 2. Include any default variable overrides here
+// Include any default variable overrides here (though functions won't be available)
 
-// 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
-@import "./bootstrap/scss/variables";
-@import "./bootstrap/scss/variables-dark";
+$primary: #E59D35;
+$primarybackground: #F2F2F0;
+$darkgreen: #343C2C;
 
-// 4. Include any default map overrides here
+$theme-colors: (
+    "primary": $primary
+);
 
-// 5. Include remainder of required parts
-@import "./bootstrap/scss/maps";
-@import "./bootstrap/scss/mixins";
-@import "./bootstrap/scss/root";
+$custom-colors: (
+    "primary-background": $primarybackground,
+    "dark-green": $darkgreen
+);
 
-// Add custom code after this
+$theme-colors: map-merge($theme-colors, $custom-colors);
 
-body {
-    background-color: aquamarine;
+@import "./bootstrap/scss/bootstrap";
+
+// Then add additional custom code here
+
+/* HEADER */
+
+.header-row {
+    padding: 0!important;
+}
+
+.header{
+    background-color: var(--bs-dark-green);
+    position: fixed;
+    z-index: 3;
+
+    .image-container{
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100px;
+        width: 60%;
+        padding: 10px;
+    
+        img {
+            width: 100%;
+            height: 99%;
+        }
+    }
+
+    a {
+        .btn-primary{
+            width: 100%;
+            padding: 10px 10px;
+            border-radius: 24px;
+
+            /* &:hover {
+                background-color: ;
+            } */
+        }
+    }
 }
