--- a/css/main.css
+++ b/css/main.css
@@ -3260,7 +3260,7 @@ textarea.form-control-lg {
 
 .dropdown-menu {
   --bs-dropdown-zindex: 1000;
-  --bs-dropdown-min-width: 10rem;
+  --bs-dropdown-min-width: 5rem;
   --bs-dropdown-padding-x: 0;
   --bs-dropdown-padding-y: 0.5rem;
   --bs-dropdown-spacer: 0.125rem;
@@ -3268,15 +3268,15 @@ textarea.form-control-lg {
   --bs-dropdown-color: var(--bs-body-color);
   --bs-dropdown-bg: var(--bs-body-bg);
   --bs-dropdown-border-color: var(--bs-border-color-translucent);
-  --bs-dropdown-border-radius: var(--bs-border-radius);
+  --bs-dropdown-border-radius: 0;
   --bs-dropdown-border-width: var(--bs-border-width);
-  --bs-dropdown-inner-border-radius: calc(var(--bs-border-radius) - var(--bs-border-width));
+  --bs-dropdown-inner-border-radius: calc(0 - var(--bs-border-width));
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-divider-margin-y: 0.5rem;
   --bs-dropdown-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   --bs-dropdown-link-color: var(--bs-body-color);
   --bs-dropdown-link-hover-color: var(--bs-body-color);
-  --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
+  --bs-dropdown-link-hover-bg: rgba(229, 156, 53, 0.5019607843);
   --bs-dropdown-link-active-color: #fff;
   --bs-dropdown-link-active-bg: #E59D35;
   --bs-dropdown-link-disabled-color: var(--bs-tertiary-color);
@@ -11742,6 +11742,18 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+h1, .h1 {
+  font-size: 54px;
+  text-align: left;
+  letter-spacing: 0px;
+}
+
+p {
+  font-size: 18px;
+  text-align: left;
+  letter-spacing: 0px;
+}
+
 body {
   background-color: var(--bs-primary-background);
 }
@@ -11758,23 +11770,12 @@ body {
 }
 .header .image-container {
   background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100px;
-  width: 60%;
+  height: 75px;
+  width: 75%;
   padding: 10px;
 }
 .header .image-container img {
   width: 100%;
-  height: 99%;
-}
-.header a .btn-primary {
-  width: 100%;
-  padding: 10px 10px;
-  border-radius: 24px;
-  /* &:hover {
-      background-color: ;
-  } */
 }
 .header .header-navigation {
   display: flex;
@@ -11793,12 +11794,54 @@ body {
   padding: 0;
 }
 .header .header-navigation #primary-menu li a {
-  font-size: 18px/27px;
+  font-size: 18px;
   letter-spacing: 0px;
   color: var(--bs-lighter-text);
   text-decoration: none;
 }
 .header .header-navigation #primary-menu li a:hover {
+  color: var(--bs-primary);
+}
+.header .languages-container .btn {
+  color: var(--bs-lighter-text);
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header .languages-container .btn:hover {
+  color: var(--bs-primary);
+}
+.header .languages-container .btn img {
+  width: 40%;
+  margin-right: 7px;
+}
+.header .languages-container ul {
+  color: var(--bs-lighter-text);
+  font-size: 18px;
+}
+.header .languages-container ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--bs-darker-text);
+}
+.header .languages-container ul li a img {
+  width: 40%;
+  margin-right: 7px;
+}
+.header .account-container a {
+  color: var(--bs-primary-background);
+  font-size: 25px;
+}
+.header .account-container a:hover {
+  color: var(--bs-primary);
+}
+.header .cart-container a {
+  color: var(--bs-primary-background);
+  font-size: 25px;
+}
+.header .cart-container a:hover {
   color: var(--bs-primary);
 }
 
@@ -11812,7 +11855,7 @@ body {
 .mobile-navigation .hamburger div {
   width: 30px;
   height: 3px;
-  background: black;
+  background: var(--bs-primary-background);
   margin: 5px;
 }
 .mobile-navigation h4, .mobile-navigation .h4 {
@@ -11849,31 +11892,42 @@ body {
 /****************** HOME - HERO ******************/
 .home-hero-component {
   position: relative;
-  min-height: 750px;
+  min-height: 725px;
   background-color: var(--bs-primary-background);
   padding-top: 100px;
   padding-bottom: 50px;
 }
 .home-hero-component .home-hero-content-container {
   z-index: 1;
-  padding-bottom: 50px;
   width: 100%;
 }
 .home-hero-component .home-hero-content-container h1, .home-hero-component .home-hero-content-container .h1 {
-  font-size: 72px/94px;
-  font-weight: normal normal medium;
-  text-align: left;
-  letter-spacing: 0px;
   color: var(--bs-lighter-text);
-  width: 50%;
+  width: 75%;
 }
 .home-hero-component .home-hero-content-container p {
-  font-size: 24px/34px;
-  font-weight: normal normal medium;
-  text-align: left;
-  letter-spacing: 0px;
+  font-size: 18px;
   color: var(--bs-lighter-text);
-  width: 50%;
+  width: 65%;
+}
+.home-hero-component .home-hero-content-container a .btn-primary {
+  width: 100%;
+  padding: 10px 25px;
+  border-radius: 24px;
+  font-size: 18px;
+  color: var(--bs-lighter-text);
+  /* &:hover {
+      background-color: ;
+  } */
+}
+.home-hero-component .home-hero-content-container a .btn-link {
+  text-align: left;
+  margin-left: 10px;
+  font-size: 18px;
+  font-weight: normal normal medium;
+  letter-spacing: 0px;
+  color: var(--bs-primary);
+  text-decoration: none;
 }
 .home-hero-component .bg-image-container {
   width: 100%;
