--- a/css/main.scss
+++ b/css/main.scss
@@ -3,13 +3,26 @@
 
 // Include any default variable overrides here (though functions won't be available)
 
+// COLORS VARIABLES
+
 $primary: #E59D35;
 $primarybackground: #F2F2F0;
 $lightertext: #F2F2F0;
 $darkertext: #343C2C;
 $darkgreen: #343C2C;
 
+// FONTS
+
 $font-family-base: 'Houschka Rounded', sans-serif;
+
+// DROPDOWN
+
+$dropdown-min-width: 5rem;
+$dropdown-border-radius: 0;
+$dropdown-link-hover-bg: #e59c3580;
+$dropdown-link-active-bg: #E59D35;
+
+// THEME COLORS
 
 $theme-colors: (
     "primary": $primary
@@ -28,6 +41,10 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 
 // Then add additional custom code here
 
+@import "./mixins";
+@include heading1;
+@include paragraph;
+
 body {
     background-color: var(--bs-primary-background);
 }
@@ -45,27 +62,12 @@ body {
 
     .image-container{
         background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        height: 100px;
-        width: 60%;
+        height: 75px;
+        width: 75%;
         padding: 10px;
     
         img {
             width: 100%;
-            height: 99%;
-        }
-    }
-
-    a {
-        .btn-primary{
-            width: 100%;
-            padding: 10px 10px;
-            border-radius: 24px;
-
-            /* &:hover {
-                background-color: ;
-            } */
         }
     }
 
@@ -86,7 +88,7 @@ body {
                 padding: 0;
     
                 a {
-                    font-size: 18px/27px;
+                    font-size: 18px;
                     letter-spacing: 0px;
                     color: var(--bs-lighter-text);
                     text-decoration: none;
@@ -95,6 +97,69 @@ body {
                         color: var(--bs-primary);
                     }
                 }
+            }
+        }
+    }
+
+    // HEADER - LANGUAGES
+
+    .languages-container {
+        .btn {
+            color: var(--bs-lighter-text);
+            font-size: 18px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &:hover {
+                color: var(--bs-primary);
+            }
+
+            img {
+                width: 40%;
+                margin-right: 7px;
+            }
+        }
+
+        ul {
+            color: var(--bs-lighter-text);
+            font-size: 18px;
+
+            li {                
+                a {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: var(--bs-darker-text);
+
+                    img {
+                        width: 40%;
+                        margin-right: 7px;
+                    }
+                }
+            }
+        }
+    }
+
+    // ACCOUNT AND CART
+    .account-container {
+        a {
+            color: var(--bs-primary-background);
+            font-size: 25px;
+
+            &:hover {
+                color: var(--bs-primary);
+            }
+        }
+    }
+
+    .cart-container {
+        a {
+            color: var(--bs-primary-background);
+            font-size: 25px;
+
+            &:hover {
+                color: var(--bs-primary);
             }
         }
     }
@@ -111,7 +176,7 @@ body {
     .hamburger div{
         width: 30px;
         height: 3px;
-        background: black;
+        background: var(--bs-primary-background);
         margin: 5px;
     }
 
@@ -156,32 +221,48 @@ body {
 
 .home-hero-component{
     position: relative;
-    min-height: 750px;
+    min-height: 725px;
     background-color: var(--bs-primary-background);
     padding-top: 100px;
     padding-bottom: 50px;
 
     .home-hero-content-container{
         z-index: 1;
-        padding-bottom: 50px;
         width: 100%;
 
         h1 {
-            font-size: 72px/94px;
-            font-weight: normal normal medium;
-            text-align: left;
-            letter-spacing: 0px;
             color: var(--bs-lighter-text);
-            width: 50%;
+            width: 75%;
         }
     
         p {
-            font-size: 24px/34px;
-            font-weight: normal normal medium;
-            text-align: left;
-            letter-spacing: 0px;
+            font-size: 18px;
             color: var(--bs-lighter-text);
-            width: 50%;
+            width: 65%;
+        }
+
+        a {
+            .btn-primary{
+                width: 100%;
+                padding: 10px 25px;
+                border-radius: 24px;
+                font-size: 18px;
+                color: var(--bs-lighter-text);
+    
+                /* &:hover {
+                    background-color: ;
+                } */
+            }
+
+            .btn-link {
+                text-align: left;
+                margin-left: 10px;
+                font-size: 18px;
+                font-weight: normal normal medium;
+                letter-spacing: 0px;
+                color: var(--bs-primary);
+                text-decoration: none;
+            }
         }
     }
 
