--- a/css/main.css
+++ b/css/main.css
@@ -11748,10 +11748,44 @@ h1, .h1 {
   letter-spacing: 0px;
 }
 
+h2, .h2 {
+  font-size: 38px;
+  font-weight: bold;
+  letter-spacing: 0px;
+}
+
+h3, .h3 {
+  font-size: 32px;
+  letter-spacing: 0px;
+}
+
 p {
   font-size: 18px;
   text-align: left;
   letter-spacing: 0px;
+}
+
+.btn-primary {
+  width: 100%;
+  padding: 10px 25px;
+  border-radius: 24px;
+  font-size: 18px;
+  color: var(--bs-lighter-text);
+  /* &:hover {
+      background-color: ;
+  } */
+}
+
+.btn-link {
+  text-align: left;
+  font-size: 18px;
+  font-weight: medium;
+  letter-spacing: 0px;
+  color: var(--bs-primary);
+  text-decoration: none;
+}
+.btn-link .bi-arrow-right {
+  margin-left: 5px;
 }
 
 body {
@@ -11813,7 +11847,7 @@ body {
   color: var(--bs-primary);
 }
 .header .languages-container .btn img {
-  width: 40%;
+  width: 35%;
   margin-right: 7px;
 }
 .header .languages-container ul {
@@ -11910,24 +11944,8 @@ body {
   color: var(--bs-lighter-text);
   width: 65%;
 }
-.home-hero-component .home-hero-content-container a .btn-primary {
-  width: 100%;
-  padding: 10px 25px;
-  border-radius: 24px;
-  font-size: 18px;
-  color: var(--bs-lighter-text);
-  /* &:hover {
-      background-color: ;
-  } */
-}
 .home-hero-component .home-hero-content-container a .btn-link {
-  text-align: left;
   margin-left: 10px;
-  font-size: 18px;
-  font-weight: normal normal medium;
-  letter-spacing: 0px;
-  color: var(--bs-primary);
-  text-decoration: none;
 }
 .home-hero-component .bg-image-container {
   width: 100%;
@@ -11936,4 +11954,125 @@ body {
 .home-hero-component .bg-image-container img {
   width: 100%;
   filter: brightness(60%);
+}
+
+/****************** HOME - GET TO KNOW US ******************/
+/****************** HOME - RESERVE AND COLLECT ******************/
+.home-default-container {
+  background-color: var(--bs-primary-background);
+}
+.home-default-container .row {
+  padding: 60px 0;
+}
+.home-default-container .row .home-default-image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.home-default-container .row .home-default-image img {
+  width: 100%;
+}
+.home-default-container .row .home-default-text-container {
+  width: 50%;
+}
+.home-default-container .row .home-default-text-container h2, .home-default-container .row .home-default-text-container .h2 {
+  color: var(--bs-darker-text);
+  text-align: left;
+  margin: 0 0 20px 10px;
+  width: 90%;
+}
+.home-default-container .row .home-default-text-container .home-default-text-p {
+  color: var(--bs-darker-text);
+  margin: 0 0 20px 10px !important;
+  width: 85%;
+}
+
+/****************** HOME - SPECIAL OFFER ******************/
+/****************** HOME - CUSTOM CAKES ******************/
+.offer-component {
+  position: relative;
+  min-height: 500px;
+}
+.offer-component .offer-content-container {
+  z-index: 1;
+}
+.offer-component .offer-content-container h2, .offer-component .offer-content-container .h2 {
+  text-align: center;
+  margin-bottom: 15px;
+  width: 85%;
+  color: var(--bs-lighter-text);
+}
+.offer-component .bg-image-container {
+  width: 100%;
+  position: absolute;
+  transform-origin: top center;
+  transform: scale(1);
+}
+.offer-component .bg-image-container img {
+  width: 100%;
+  filter: brightness(75%);
+}
+
+/****************** HOME - SHOP INTRODUCTION ******************/
+.shop-introduction-component {
+  background-color: var(--bs-primary-background);
+}
+.shop-introduction-component .shop-introduction-row .row {
+  padding-top: 40px;
+}
+.shop-introduction-component .shop-introduction-container {
+  width: 50%;
+}
+.shop-introduction-component .shop-introduction-container .shop-introduction-text-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.shop-introduction-component .shop-introduction-container .shop-introduction-text-container h2, .shop-introduction-component .shop-introduction-container .shop-introduction-text-container .h2 {
+  text-align: center;
+  color: var(--bs-darker-text);
+  margin-bottom: 15px;
+}
+.shop-introduction-component .shop-introduction-container .shop-introduction-text-container p {
+  text-align: center;
+  color: var(--bs-darker-text);
+  margin: 0;
+}
+
+.shop-categories-row .row {
+  padding: 30px 0;
+}
+.shop-categories-row .card-group .card {
+  background-color: var(--bs-primary-background);
+  border: none;
+  border-radius: 0;
+  width: 95%;
+  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.1490196078);
+  transition: transform 0.2s;
+  overflow: hidden;
+}
+.shop-categories-row .card-group .card img {
+  border-radius: 0;
+  height: 100%;
+  transition: transform 0.5s ease;
+}
+.shop-categories-row .card-group .card:hover img {
+  transform: scale(1.25);
+}
+.shop-categories-row .card-group .card .card-img-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 0;
+}
+.shop-categories-row .card-group .card .card-img-overlay .title-shadow {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background: transparent linear-gradient(179deg, rgba(7, 6, 6, 0) 0%, #3D362D 100%) 0% 0% no-repeat padding-box;
+}
+.shop-categories-row .card-group .card .card-img-overlay .title-shadow .card-title {
+  color: var(--bs-lighter-text);
+  margin-bottom: 30px;
 }
